[gd_scene load_steps=4 format=2]

[ext_resource path="res://font/dogica.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/Counter.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
margin_right = 200.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 4 )
color = Color( 0.92549, 0.85098, 0.839216, 1 )

[node name="BeatCount" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 88.0
margin_top = 9.0
margin_right = 112.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 12, 15 )
custom_colors/font_color = Color( 0.92549, 0.85098, 0.839216, 1 )
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1

[node name="RectTween" type="Tween" parent="."]

[node name="LabelTween" type="Tween" parent="."]
